# CharsetForensicAnalyzer

./: .gitignore  LICENSE  README.md  analyzer.py  app.py  cli.py  main.py  models.py  pyproject.toml  requirements-dev.txt  requirements.txt
api/: errors.py  middleware.py  response.py  routes.py  schemas.py  tempfiles.py  upload.py
converters/: utf8.py
core/: analyzer_engine.py  downloader.py  logger.py  reader.py
detectors/: bom.py  frequency.py  latin.py  mojibake.py  spanish.py  utf8.py
reports/: console.py  json_report.py  preview.py
services/: analyzer_service.py  converter_service.py
storage/: cleanup.py  manager.py
