[project]
name = "charset-forensic-analyzer"
version = "2.5.0"
description = "Charset Forensic Analyzer API and CLI"
readme = "README.md"
requires-python = ">=3.14"

authors = [
    { name = "Gerald Villalobos" }
]

dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "requests>=2.32.0",
    "python-multipart>=0.0.20"
]

[tool.black]
line-length = 88

[tool.pytest.ini_options]
testpaths = [
    "tests"
]